--- a/app/index.html
+++ b/app/index.html
@@ -78,6 +78,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/store.js"></script>
+        <script src="scripts/controllers/category.js"></script>
+        <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/cart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
