--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/store.js"></script>
+        <script src="scripts/controllers/category.js"></script>
         <!-- endbuild -->
 </body>
 </html>
