Generate product route

--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/store.js"></script>
         <script src="scripts/controllers/category.js"></script>
+        <script src="scripts/controllers/product.js"></script>
         <!-- endbuild -->
 </body>
 </html>
