Generate cart route

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/controllers/store.js"></script>
         <script src="scripts/controllers/category.js"></script>
         <script src="scripts/controllers/product.js"></script>
+        <script src="scripts/controllers/cart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
