--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,14 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">petstore</a>
+            <a class="navbar-brand" href="#/">Petstore</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/store">Store</a></li>
             </ul>
           </div>
         </div>
@@ -74,6 +73,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="scripts/vendor/moltin.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -86,6 +86,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/moltin.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/store.js"></script>
@@ -93,5 +94,6 @@
         <script src="scripts/controllers/product.js"></script>
         <script src="scripts/controllers/cart.js"></script>
         <!-- endbuild -->
+    <script src="https://js.moltin.com/v1"></script>
 </body>
 </html>
