--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-  <header id="header" class="header-area">
+<header id="header" class="header-area">
   <div class="header-top">
     <div class="container">
       <div class="row">
@@ -229,9 +229,8 @@
   </div><!-- /.header-bottom -->
   </header>
 
-    <div class="container">
+    <!-- Angular view -->
     <div ng-view=""></div>
-    </div>
 
     <!-- footer-area start -->
     <footer id="footer" class="footer-area">
@@ -422,59 +421,6 @@
     <script src="scripts/controllers/product.js"></script>
     <script src="scripts/controllers/cart.js"></script>
     <!-- endbuild -->
-    <!-- price-slider JS -->
-    <script src="js/jquery-price-slider.js"></script>
-
-    <!-- venobox JS -->
-    <script src="js/venobox/venobox.min.js"></script>
-
-    <!-- meanmenu JS -->
-    <script src="js/jquery.meanmenu.js"></script>
-
-    <!-- owl.carousel JS -->
-    <script src="js/owl.carousel.min.js"></script>
-
-    <!-- scrollUp JS -->
-    <script src="js/jquery.scrollUp.min.js"></script>
-
-  	<!-- nivo slider JS -->
-    <script src="lib/js/jquery.nivo.slider.js"></script>
-    <script src="lib/home.js"></script>
-
-    <!-- plugins JS -->
-    <script src="js/plugins.js"></script>
-
-    <!-- main JS -->
-    <script src="js/main.js"></script>
-
-    <!-- for video play & pause -->
-    <script type="text/javascript">
-    		(function() {
-    			var vid = document.getElementById("videobg");
-    			var pauseButton = document.querySelector("a.video-btn");
-    			function vidFade() {
-    				vid.classList.add("stopfade");
-    			}
-    			vid.addEventListener('ended', function()
-    			{
-    			// only functional if "loop" is removed
-    				vid.pause();
-    			// to capture IE10
-    				vidFade();
-    			});
-    			pauseButton.addEventListener("click", function() {
-    			vid.classList.toggle("stopfade");
-    			if (vid.paused) {
-    				vid.play();
-    				pauseButton.innerHTML =["<i class='fa fa-pause'></i>"];
-    			}
-    			else {
-    				vid.pause();
-    				pauseButton.innerHTML = ["<i class='fa fa-play'></i>"];
-    			}
-    			});
-    		}());
-    </script>
 
     <script src="https://js.moltin.com/v1"></script>
 </body>
